<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/title"
        style="@style/TopStatus">

        <ImageView
            android:id="@+id/iv_joinUs_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:src="@drawable/item_back" />

        <TextView
            style="@style/nav_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="加入UDers"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400sp"
        android:background="#f4f4f4"
        android:layout_margin="10sp"
        android:padding="10sp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollY="0sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="30sp"
                android:layout_marginLeft="30sp">

                <TextView
                    style="@style/title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20sp"
                    android:layout_marginTop="20sp"
                    android:text="关于加入UDers的协议"
                    android:textStyle="bold" />

                <TextView
                    style="default_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10sp"
                    android:text="一、导言"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10sp"
                    android:text="@string/join_agreemt1" />

                <TextView
                    style="default_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10sp"
                    android:text="二、员工注册"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10sp"
                    android:text="@string/join_agreemt2" />

                <TextView
                    style="default_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10sp"
                    android:text="三、甲方权利与义务"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10sp"
                    android:text="@string/join_agreemt3" />

                <TextView
                    style="default_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10sp"
                    android:text="四、乙方义务与待遇"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10sp"
                    android:text="@string/join_agreemt4" />

                <TextView
                    style="default_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10sp"
                    android:text="五、其他"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10sp"
                    android:text="@string/join_agreemt5" />

            </LinearLayout>

        </ScrollView>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="10dp">

        <CheckBox
            android:id="@+id/cb_atyJoinUs_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/cb_atyJoinUs_agree"
            android:layout_toRightOf="@id/cb_atyJoinUs_agree"
            android:text="我同意《关于加入UDers的协议》" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_atyJoinUs_submit"
        style="@style/default_text"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/item_btn"
        android:gravity="center"
        android:text="申请加入UDers"
        android:textColor="@color/white" />

</LinearLayout>
