<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_grey"
    android:orientation="vertical">

    <LinearLayout style="@style/TopStatus">

        <ImageView
            android:id="@+id/back_to_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:src="@drawable/item_back" />

        <TextView
            style="@style/nav_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="登录"
            android:textColor="@color/white" />

    </LinearLayout>


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_grey"
            android:orientation="vertical"
            android:gravity="center">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150sp"
                android:layout_marginTop="10sp"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <com.example.administrator.bottom.widget.ImageViewPlus
                    android:id="@+id/iv_avatar"
                    android:layout_width="70sp"
                    android:layout_height="70sp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_logo_bo" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="10sp"
                android:background="@color/transparent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:paddingTop="10sp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10sp">

                    <EditText
                        android:id="@+id/etPhoneNum"
                        android:hint="@string/phone"
                        android:layout_width="match_parent"
                        android:layout_height="30sp"
                        android:background="@color/transparent"
                        android:inputType="phone"
                        android:paddingLeft="12sp"
                        android:singleLine="true"
                        android:layout_marginBottom="10sp"
                        android:textSize="16sp"
                        android:textColor="@color/text_clo"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="5sp"
                        android:layout_alignBottom="@id/etPhoneNum"
                        android:background="@drawable/sp_line_login"></View>


                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.5">

                        <EditText
                            android:id="@+id/etCode"
                            android:hint="@string/code"
                            android:layout_width="match_parent"
                            android:layout_height="30sp"
                            android:background="@color/transparent"
                            android:inputType="phone"
                            android:paddingLeft="12sp"
                            android:singleLine="true"
                            android:layout_marginBottom="10sp"
                            android:textSize="16sp"
                            android:textColor="@color/text_clo"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true" />

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="5sp"
                            android:layout_alignBottom="@id/etCode"
                            android:background="@drawable/sp_line_login"></View>

                    </RelativeLayout>

                    <Button
                        android:id="@+id/btnGetCode"
                        style="@style/min_text"
                        android:layout_width="0sp"
                        android:layout_height="28sp"
                        android:layout_marginLeft="10sp"
                        android:layout_weight="1"
                        android:text="@string/get_code"
                        android:textColor="#1155a4"
                        android:background="@drawable/rect_roundcornor_blue"/>

                </LinearLayout>

            </LinearLayout>


            <Button
                android:id="@+id/btnLogin"
                style="@style/default_text"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@drawable/item_btn"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white" />

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="140sp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:src="@drawable/item_mng_bg" />
    </RelativeLayout>
</LinearLayout>
